# coo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.c
src/camera/: CMakeLists.txt  camera.c  camera.h  light.c  light.h
src/image/: CMakeLists.txt  color.c  color.h  image.c  image.h
src/math/: CMakeLists.txt  ray.c  ray.h  vector.c  vector.h
src/mesh/: CMakeLists.txt  object.c  object.h  plane.c  plane.h  sphere.c  sphere.h
src/renderer/: CMakeLists.txt  tracer.c  tracer.h
